[package]
name = "tex2typst-UI"
version = "0.1.0"
authors = ["Jamie <bdmundxyang@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Unpredictability/tex2typst-UI"
description = "A GUI for tex2typst-rs"
categories = ["text-processing", "parsing", "mathematics"]
keywords = ["latex", "tex", "math", "typst", "converting"]
readme = "README.md"

[dependencies]
tex2typst-rs = { git = "https://github.com/Unpredictability/tex2typst-rs" }
egui = { version = "0.31.0", features = [] }
egui-notify = "0.19.0"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    "wayland", # To support Linux (and CI)
] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
typstyle-core = "0.12.14"
regex = "1.11.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1  # Reduce parallelism to improve optimizations
strip = true       # Remove debug symbols
panic = "abort"    # Remove panic machinery

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
