[package]
name = "tex2typst-UI"
version = "0.1.0"
authors = ["Jamie <bdmundxyang@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Unpredictability/tex2typst-UI"
description = "A GUI for tex2typst-rs"
categories = ["text-processing", "parsing", "mathematics"]
keywords = ["latex", "tex", "math", "typst", "converting"]
readme = "README.md"

[dependencies]
tex2typst-rs = { git = "https://github.com/Unpredictability/tex2typst-rs" }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
typstyle-core = "0.12.14"
regex = "1.11.1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlTextAreaElement", "console", "Text", "Event", "EventTarget"] }
console = "0.15.10"
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1  # Reduce parallelism to improve optimizations
strip = true       # Remove debug symbols
panic = "abort"    # Remove panic machinery

[profile.dev.package."*"]
opt-level = 2
